@startuml
skinparam class{
  BackgroundColor<<Nouv>> Pink
}


class Labyrinthe {
    - murs : boolean[][]
    + Labyrinthe(nom : String)
    + getSuivant(x : int, y : int, action : String) : int[]
    + deplacerPerso(pj : Perso, direction : String)
    + deplacerCaisses(x : int, y : int, direction : String)
    + caseDisponible(x : int, y : int) : boolean
    + etreFini() : boolean
    + getLength() : int
    + getLengthY() : int
    + getMur(x : int, y : int) : boolean
    + getMurs() : boolean[][]
    + getCaisses(x : int, y : int) : boolean
    + getEmplacementsCaisse() : EmplacementsCaisse
    + getPj() : Perso
}

class Cases <<Nouv>>{
    - pos: boolean[][]
    + Cases(x : int, y : int)
    + ajouter(x : int, y : int)
    + etrePresent(x : int, y : int): boolean
    + getPos() : int
}

class Caisses <<Nouv>>{
    + Caisses(x : int, y : int)
    + deplacer(x : int, y : int, dx : int, dy : int): boolean
}

class EmplacementsCaisse <<Nouv>>{
    + EmplacementCaisses(x : int, y : int)
    + etreFini(c : Caisses): boolean
}

class Perso {
    ~ x : int
    ~ y : int
    + Perso(dx : int, dy : int)
    + etrePresent(dx : int, dy : int) : boolean
    + getX() : int
    + getY() : int
}
Labyrinthe "*" --> "1" Perso : - pj

Labyrinthe "*" --> "1" Caisses : - caisses

Labyrinthe "*" --> "1" EmplacementsCaisse : - emplacementsCaisse

Cases <|-- Caisses
Cases <|-- EmplacementsCaisse
@enduml